[package]
name = "tls_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tls_derive = { path = "tls_derive" }
byteorder = "1.4.3"
rand = "0.8.4"

[lib]
name = "tls_explore"
path = "src/lib.rs"